--- a/package.json
+++ b/package.json
@@ -17,6 +17,9 @@
   },
   "homepage": "https://github.com/kindohm/brane#readme",
   "dependencies": {
-    "express": "^4.13.3"
+    "ace-editor-builds": "^1.2.0",
+    "bootstrap": "^3.3.6",
+    "express": "^4.13.3",
+    "socket.io": "^1.3.7"
   }
 }
