--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "ace-editor-builds": "^1.2.0",
     "bootstrap": "^3.3.6",
     "express": "^4.13.3",
-    "socket.io": "^1.3.7"
+    "socket.io": "^1.3.7",
+    "socket.io-client": "^1.3.7"
   }
 }
